initial commit. login and registration working, with two views upon login. commiting and attempting to add in angular material

--- a/client/views/partials/nav.html
+++ b/client/views/partials/nav.html
@@ -1,4 +1,11 @@
-<ul>
-  <li><a href="#/user">User Home</a></li>
-  <li><a href="#/info">Info Page</a></li>
-</ul>
+<div class="views-nav">
+
+    <div class = 'row navBar'>
+      <ul class = 'nav nav-pills'>
+        <!-- <li role = 'presentation'><a href="#/user">User Home</a></li>
+        <li role = 'presentation'><a href="#/info">Info Page</a></li> -->
+        <li role = 'presentation'><a href="#/tovisit">To Visit</a></li>
+        <li role = 'presentation'><a href="#/visited">Visited</a></li>
+      </ul>
+    </div>
+</div>
