--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="myApp">
     <head>
-        <title>Express / Passport</title>
+        <title>Bucket//App</title>
         <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="styles/style.css">
 
@@ -10,7 +10,7 @@
         <script type="text/javascript" src="scripts/client.min.js"></script>
     </head>
 
-    <body ng-app="myApp">
+    <body>
       <header ng-include="'/views/partials/header.html'"></header>
 
       <main ng-view></main>
