--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -2,10 +2,17 @@
 <html ng-app="myApp">
     <head>
         <title>Bucket//App</title>
+
+
+
         <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href='vendors/angular-material/angular-material.min.css'>
 
         <script type="text/javascript" src="vendors/angular/angular.min.js"></script>
+        <script type="text/javascript" src="vendors/angular-aria/angular-aria.js"></script>
+        <script type="text/javascript" src="vendors/angular-animate/angular-animate.js"></script>
+        <script type="text/javascript" src="vendors/angular-material/angular-material.js"></script>
         <script type="text/javascript" src="vendors/angular-route/angular-route.min.js"></script>
         <script type="text/javascript" src="scripts/client.min.js"></script>
     </head>
