--- a/server/public/views/partials/nav.html
+++ b/server/public/views/partials/nav.html
@@ -6,6 +6,7 @@
         <li role = 'presentation'><a href="#/info">Info Page</a></li> -->
         <li role = 'presentation'><a href="#/tovisit">To Visit</a></li>
         <li role = 'presentation'><a href="#/visited">Visited</a></li>
+        <button class="btn btn-default" ng-click="logout()">Log Out</button>
       </ul>
     </div>
 </div>
