--- a/client/views/templates/user.html
+++ b/client/views/templates/user.html
@@ -1,4 +1,5 @@
 <div class="container">
     <div ng-include="'views/partials/nav.html'"></div>
     <h1 id="welcome" class="lead">Welcome, {{userObject.userName}}!</h1>
+    <div>To Visit Locations Go Here!</div>
 </div>
