--- a/server/public/views/templates/Landing.html
+++ b/server/public/views/templates/Landing.html
@@ -1,5 +1,14 @@
-<div ng-controller='LandingController'>
+<!-- <div ng-controller='LandingController'>
 <div ng-include="'views/partials/nav.html'"></div>
 
 <p>Landing Page</p>
+
+</div> -->
+
+<div class="container">
+  <!-- <h1>Welcome to Bucket //</h1> -->
+  <button><a href="#/home">Login</a></button>
+  <button><a href="#/register">Register</a></button>
+  <br><img src="../styles/imgs/mplsSkyline.jpg" />
+
 </div>
