saving before deleting client.min.js after adjusting gruntfile to determine why addcontroller is sourced twice

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -7,13 +7,30 @@
         <link rel="stylesheet" href="styles/style.css">
         <link rel="stylesheet" href='vendors/angular-material/angular-material.min.css'>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
         <script type="text/javascript" src="vendors/angular/angular.min.js"></script>
         <script type="text/javascript" src="vendors/angular-aria/angular-aria.js"></script>
         <script type="text/javascript" src="vendors/angular-animate/angular-animate.js"></script>
         <script type="text/javascript" src="vendors/angular-material/angular-material.js"></script>
         <script type="text/javascript" src="vendors/angular-route/angular-route.min.js"></script>
-        <script type="text/javascript" src="scripts/client.min.js"></script>
+        <!-- <script type="text/javascript" src="scripts/client.min.js"></script> -->
+
+        <!-- Controllers -->
+        <script type="text/javascript" src="scripts/controllers/AddController.js"></script>
+        <script type="text/javascript" src="scripts/controllers/EditController.js"></script>
+        <script type="text/javascript" src="scripts/controllers/ExpandController.js"></script>
+        <script type="text/javascript" src="scripts/controllers/infoController.js"></script>
+        <script type="text/javascript" src="scripts/controllers/LandingController.js"></script>
+        <script type="text/javascript" src="scripts/controllers/loginController.js"></script>
+        <script type="text/javascript" src="scripts/controllers/SubmitController.js"></script>
+        <script type="text/javascript" src="scripts/controllers/ToVisitController.js"></script>
+        <script type="text/javascript" src="scripts/controllers/userController.js"></script>
+        <script type="text/javascript" src="scripts/controllers/VisitedController.js"></script>
+
+        <!-- Factories/ClientApp -->
+        <script type="text/javascript" src="scripts/factories/UserService.js"></script>
+        <script type="text/javascript" src="scripts/clientapp.js"></script>
 
     </head>
 
