--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="styles/style.css">
         <link rel="stylesheet" href='vendors/angular-material/angular-material.min.css'>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
         <script type="text/javascript" src="vendors/angular/angular.min.js"></script>
         <script type="text/javascript" src="vendors/angular-aria/angular-aria.js"></script>
