got the post route to work! hallelujah!

--- a/client/views/partials/header.html
+++ b/client/views/partials/header.html
@@ -5,8 +5,8 @@
 </div> -->
 
 <md-toolbar class="md-hue-2">
-<div layout="column" class="md-toolbar-tools">
-  <md-button class="md-icon-button" aria-label="Settings"></md-button
-<h1>Bucket //</h1>
+<div layout="column" class="md-toolbar-tools" layout-align="center center">
+  <!-- <md-button class="md-icon-button" aria-label="Settings"></md-button> -->
+  <h1>Bucket //</h1>
 </div>
 </md-toolbar>
