--- a/client/views/templates/ToVisit.html
+++ b/client/views/templates/ToVisit.html
@@ -1,7 +1,6 @@
-<div ng-controller='ToVisitController'>
 <div ng-include="'views/partials/nav.html'"></div>
 
-<button> Add Happening </button>
+<button><a href='#/add'>Add Happening</a></button>
 <p>ToVisit Page</p>
 <div>To Visit Locations Go Here!</div>
 </div>
