--- a/server/public/views/templates/Add.html
+++ b/server/public/views/templates/Add.html
@@ -1,6 +1,4 @@
 <!-- ADD NEW PLACE FORM VIEW -->
-
-<div ng-controller='AddController' layout='column' ng-cloak class='md-inline-form'>
 <div ng-include="'views/partials/nav.html'"></div>
 
 <!-- <p>Add Page</p> -->
@@ -8,17 +6,25 @@
 <md-content layout-padding>
   <div>
     <form name='newPlaceForm'>
-        <p>Search Bar</p>
 
       <div layout-gt-xs='row'>
         <md-input-container class='md-block' flex-gt-xs>
-          <label>Name of Place</label>
+          <label>Name of Place (Search)</label>
           <input ng-model='location.name'>
         </md-input-container>
 
         <md-input-container class='md-block' flex-gt-xs>
           <label>Date Added</label>
           <md-datepicker ng-model='location.dateAdded'></md-datepicker>
+        </md-input-container>
+
+        <md-input-container class='md-block' flex-gt-xs>
+          <label>Type</label>
+          <md-select ng-model='location.type'>
+            <md-option ng-repeat='type in types' value='{{type.type}}'>
+              {{type.type}}
+            </md-option>
+          </md-select>
         </md-input-container>
       </div>
 
@@ -70,7 +76,7 @@
       </div>
 
       <div layout="row" layout-align="end center">
-        <md-button class='md-raised' ng-click = 'addNewPlace(location)'>Add New Event</md-button>
+        <md-button class='md-raised' ng-click ='addNewPlace(location)'><a href='#/tovisit'>Add New Event</a></md-button>
       </div>
 
     </form>
