--- a/client/views/index.html
+++ b/client/views/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="styles/style.css">
         <link rel="stylesheet" href='vendors/angular-material/angular-material.min.css'>
+        <link rel="stylesheet" href='vendors/angular-material-expansion-panel/md-expansion-panel.min.css'>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
 
         <script type="text/javascript" src="vendors/angular/angular.min.js"></script>
@@ -13,6 +14,7 @@
         <script type="text/javascript" src="vendors/angular-animate/angular-animate.js"></script>
         <script type="text/javascript" src="vendors/angular-material/angular-material.js"></script>
         <script type="text/javascript" src="vendors/angular-route/angular-route.min.js"></script>
+        <script type="text/javascript" src="vendors/angular-material-expansion-panel/md-expansion-panel.min.js"></script>
         <script type="text/javascript" src="scripts/client.min.js"></script>
 
     </head>
