--- a/server/public/views/templates/ToVisit.html
+++ b/server/public/views/templates/ToVisit.html
@@ -3,22 +3,54 @@
 <div layout='row' layout-align='center end'>
   <md-button class='md-raised'><a href='#/add'>Add Happening</a></md-button>
 </div>
-<p>ToVisit Page</p>
       <md-card md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch ng-repeat='place in locationList'>
         <md-card-title>
           <md-card-title-text>
             <span class="md-headline">{{place.name}}</span>
             <span class="md-subhead">{{place.dateAdded | date:"MM/dd/yyyy"}}</span>
           </md-card-title-text>
-          <!-- <md-card-title-media>
-            <div class="md-media-sm card-media"></div>
-          </md-card-title-media> -->
+                      <!-- <md-card-title-media>
+                        <div class="md-media-sm card-media"></div>
+                      </md-card-title-media> -->
         </md-card-title>
         <md-card-actions layout="row" layout-align="end center">
           <md-button>Do This!</md-button>
           <md-button>See More...</md-button>
         </md-card-actions>
       </md-card>
+
+
+<!-- COLLAPSIBLE CARDS -->
+  <!-- <md-expansion-panel md-component-id="panelOne">
+
+  <md-expansion-panel-collapsed>
+    <div class="md-title">Title</div>
+    <div class="md-summary">Summary</div>
+    <md-expansion-panel-icon></md-expansion-panel-icon>
+  </md-expansion-panel-collapsed>
+
+
+  <md-expansion-panel-expanded>
+
+    <md-expansion-panel-header>
+      <div class="md-title">Expanded Title</div>
+      <div class="md-summary">Expanded Summary</div>
+      <md-expansion-panel-icon></md-expansion-panel-icon>
+    </md-expansion-panel-header>
+
+    <md-expansion-panel-content>
+      <h4>Content</h4>
+      <p>Put content in here</p>
+    </md-expansion-panel-content>
+
+    <md-expansion-panel-footer>
+      <div flex></div>
+      <md-button class="md-warn" ng-click="$panel.collapse()">Collapse</md-button>
+    </md-expansion-panel-footer>
+
+  </md-expansion-panel-expanded>
+
+</md-expansion-panel> -->
 
 <!-- <div ng-repeat='place in locationList'>{{place}}</div> -->
 
