--- a/client/views/templates/Submit.html
+++ b/client/views/templates/Submit.html
@@ -1,4 +1,84 @@
 <div ng-include="'views/partials/nav.html'"></div>
 
-<p>Submit Page</p>
+<!-- SUBMIT PLACE FORM -->
+<md-content layout-padding>
+  <div>
+    <form name='submitPlaceForm'>
+
+      <div layout-gt-xs='row'>
+        <md-input-container class='md-block' flex-gt-xs>
+          <label>Name of Place (Search)</label>
+          <input ng-model='location.name'>
+        </md-input-container>
+
+        <md-input-container class='md-block' flex-gt-xs>
+          <label>Date Added</label>
+          <md-datepicker ng-model='location.dateAdded'></md-datepicker>
+        </md-input-container>
+
+        <md-input-container class='md-block' flex-gt-xs>
+          <label>Type</label>
+          <md-select ng-model='location.type'>
+            <md-option ng-repeat='type in types' value='{{type.type}}'>
+              {{type.type}}
+            </md-option>
+          </md-select>
+        </md-input-container>
+      </div>
+
+      <div layout-gt-xs='row'>
+        <md-input-container class='md-block' flex-gt-xs>
+          <label>Address</label>
+          <input ng-model='location.address'>
+        </md-input-container>
+      </div>
+
+      <div layout-gt-xs='row'>
+        <md-input-container class='md-block' flex-gt-xs>
+          <label>City</label>
+          <input ng-model='location.city'>
+        </md-input-container>
+
+        <md-input-container class='md-block' flex-gt-xs>
+          <label>State</label>
+          <md-select ng-model='location.state'>
+            <md-option ng-repeat='state in states' value='{{state.abbrev}}'>
+              {{state.abbrev}}
+            </md-option>
+          </md-select>
+        </md-input-container>
+
+        <md-input-container class='md-block' flex-gt-xs>
+          <label>Zip Code</label>
+          <input ng-model='location.zipcode'>
+        </md-input-container>
+      </div>
+
+      <div layout-gt-xs='row'>
+        <md-input-container class='md-block' flex-gt-xs>
+          <label>Website</label>
+          <input ng-model='location.website'>
+        </md-input-container>
+      </div>
+
+      <div layout-gt-xs='row'>
+        <md-input-container class='md-block' flex-gt-xs>
+          <label>Recommender</label>
+          <input ng-model='location.recommender'>
+        </md-input-container>
+
+        <md-input-container class='md-block' flex-gt-xs>
+          <label>Notes</label>
+          <input ng-model='location.recNotes'>
+        </md-input-container>
+      </div>
+
+      <div layout="row" layout-align="end center">
+        <md-button class='md-raised' ng-click ='addNewPlace(location)'><a href='#/tovisit'>Add New Event</a></md-button>
+      </div>
+
+    </form>
+  </div>
+</md-content>
+
 </div>
