--- a/server/public/views/templates/ToVisit.html
+++ b/server/public/views/templates/ToVisit.html
@@ -23,7 +23,8 @@
                       </md-card-title-media> -->
         </md-card-title>
         <md-card-actions layout="row" layout-align="end center">
-          <md-button ng-click='movePlace(place._id)'>Do This!</md-button>
+          <!-- <md-button ng-click='updatePlace(place._id)'>Do This!</md-button> -->
+          <md-button><a href='#/submit'>Do This!</a></md-button>
           <md-button ng-click='expandPanel()'>See More...</md-button>
         </md-card-actions>
       </md-card>
