--- a/client/views/templates/Submit.html
+++ b/client/views/templates/Submit.html
@@ -1,4 +1,3 @@
-<div ng-include="'views/partials/nav.html'"></div>
 
 <!-- SUBMIT PLACE FORM -->
 <md-content layout-padding>
@@ -74,7 +73,8 @@
       </div>
 
       <div layout="row" layout-align="end center">
-        <md-button class='md-raised' ng-click ='updatePlace(place._id)'>Finish Event!</md-button>
+        <md-button class='md-raised'><a href='#/tovisit'>Cancel</a></md-button>
+        <md-button class='md-raised' ng-click ='updatePlace(place._id)'><a href='#/tovisit'>Finish Event!</a></md-button>
       </div>
     </form>
   </div>
