--- a/server/public/views/templates/Submit.html
+++ b/server/public/views/templates/Submit.html
@@ -74,7 +74,7 @@
 
       <div layout="row" layout-align="end center">
         <md-button class='md-raised'><a href='#/tovisit'>Cancel</a></md-button>
-        <md-button class='md-raised' ng-click ='updatePlace(place._id)'><a href='#/tovisit'>Finish Event!</a></md-button>
+        <md-button class='md-raised' ng-click ='updatePlace()'><a href='#/tovisit'>Finish Event!</a></md-button>
       </div>
     </form>
   </div>
