sourced in material icons for more_vert menu (delete and edit), as well as grabbing whole place object across views to update later. updated visited value on placeObject to true to add to visited view

--- a/client/views/templates/Add.html
+++ b/client/views/templates/Add.html
@@ -71,7 +71,7 @@
       </div>
 
       <div layout="row" layout-align="end center">
-        <md-button class='md-raised' ng-click ='addNewPlace(location)'><a href='#/tovisit'>Add New Event</a></md-button>
+        <md-button class='md-raised' ng-click ='addNewPlace(location)' href='#/tovisit'>Add New Event</md-button>
       </div>
 
     </form>
