--- a/client/views/templates/Submit.html
+++ b/client/views/templates/Submit.html
@@ -73,8 +73,8 @@
       </div>
 
       <div layout="row" layout-align="end center">
-        <md-button class='md-raised'><a href='#/tovisit'>Cancel</a></md-button>
-        <md-button class='md-raised' ng-click ='updatePlace()'><a href='#/tovisit'>Finish Event!</a></md-button>
+        <md-button class='md-raised' href='#/tovisit'>Cancel</md-button>
+        <md-button class='md-raised' ng-click ='visitPlace()' href='#/tovisit'>Finish Event!</md-button>
       </div>
     </form>
   </div>
