--- a/client/views/index.html
+++ b/client/views/index.html
@@ -2,11 +2,12 @@
 <html ng-app="myApp">
     <head>
         <title>Bucket//</title>
-
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="styles/style.css">
         <link rel="stylesheet" href='vendors/angular-material/angular-material.min.css'>
         <link rel="stylesheet" href='vendors/angular-material-expansion-panel/md-expansion-panel.min.css'>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
 
         <script type="text/javascript" src="vendors/angular/angular.min.js"></script>
@@ -15,6 +16,7 @@
         <script type="text/javascript" src="vendors/angular-material/angular-material.js"></script>
         <script type="text/javascript" src="vendors/angular-route/angular-route.min.js"></script>
         <script type="text/javascript" src="vendors/angular-material-expansion-panel/md-expansion-panel.min.js"></script>
+        <!-- <script type="text/javascript" src="vendors/angular-material-icons/angular-material-icons.min.js"></script> -->
         <script type="text/javascript" src="scripts/client.min.js"></script>
 
     </head>
