--- a/server/public/views/templates/Add.html
+++ b/server/public/views/templates/Add.html
@@ -71,7 +71,7 @@
       </div>
 
       <div layout="row" layout-align="end center">
-        <md-button class='md-raised' ng-click ='addNewPlace(location)'><a href='#/tovisit'>Add New Event</a></md-button>
+        <md-button class='md-raised' ng-click ='addNewPlace(location)' href='#/tovisit'>Add New Event</md-button>
       </div>
 
     </form>
