--- a/server/public/views/templates/ToVisit.html
+++ b/server/public/views/templates/ToVisit.html
@@ -1,14 +1,18 @@
 <div ng-include="'views/partials/nav.html'"></div>
 
 <div layout='row' layout-align='center end'>
-  <md-button class='md-raised'><a href='#/add'>Add Happening</a></md-button>
+  <md-button class='md-raised' href='#/add'>Add Happening</md-button>
 </div>
+<md-button ng-class="{ visible: selectedTab==0 }" class="md-fab md-fab-bottom-right"  aria-label="Add Location" >
+              +
+    </md-button>
+<div class="list_container">
+
       <md-card md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch ng-repeat='place in locationList.data'>
 
-        <md-card-actions layout="row" layout-align="end center">
-          <md-button class="md-fab md-mini">
-            X
-          <!-- <md-icon md-svg-icon="img/icons/menu.svg"></md-icon> -->
+        <md-card-actions layout="row" layout-align="end end">
+          <md-button class="md-icon-button" aria-label="More">
+            <i class="material-icons">more_vert</i>
           </md-button>
         </md-card-actions>
 
@@ -23,12 +27,12 @@
                       </md-card-title-media> -->
         </md-card-title>
         <md-card-actions layout="row" layout-align="end center">
-          <!-- <md-button ng-click='updatePlace(place._id)'>Do This!</md-button> -->
-          <md-button ng-click='getID(place._id)'><a href='#/submit'>Do This!</a></md-button>
+          <!-- <md-button ng-click='getID(place._id)' href='#/submit'>Do This!</md-button> -->
+          <md-button ng-click='getThisPlace(place)' href='#/submit'>Do This!</md-button>
           <md-button ng-click='expandPanel()'>See More...</md-button>
         </md-card-actions>
       </md-card>
-
+</div>
 
 <!-- COLLAPSIBLE CARDS -->
   <!-- <md-expansion-panel md-component-id="panelOne">
