--- a/server/public/views/templates/ToVisit.html
+++ b/server/public/views/templates/ToVisit.html
@@ -8,7 +8,7 @@
     </md-button>
 <div class="list_container">
 
-      <md-card md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch ng-repeat='place in locationList.data'>
+      <md-card md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch ng-repeat='place in locationList.data | filter: {visited:"false"}'>
 
         <md-card-actions layout="row" layout-align="end end">
           <md-button class="md-icon-button" aria-label="More">
@@ -21,6 +21,7 @@
             <span class="md-headline">{{place.name}}</span>
             <span class="md-subhead">{{place.dateAdded | date:"MM/dd/yyyy"}}</span>
             <span>{{place._id}}</span>
+            <span>{{place.visited}}</span>
           </md-card-title-text>
                       <!-- <md-card-title-media>
                         <div class="md-media-sm card-media"></div>
