--- a/server/public/views/templates/Visited.html
+++ b/server/public/views/templates/Visited.html
@@ -1,4 +1,38 @@
 <div ng-include="'views/partials/nav.html'"></div>
 
-<p>Visited Page</p>
+<div layout='row' layout-align='center end'>
+  <md-button class='md-raised' href='#/add'>Add Happening</md-button>
+</div>
+<md-button ng-class="{ visible: selectedTab==0 }" class="md-fab md-fab-bottom-right"  aria-label="Add Location" >
+              +
+    </md-button>
+<div class="list_container">
+
+      <md-card md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch ng-repeat='place in locationList.data | filter: {visited:"true"}'>
+
+        <md-card-actions layout="row" layout-align="end end">
+          <md-button class="md-icon-button" aria-label="More">
+            <i class="material-icons">more_vert</i>
+          </md-button>
+        </md-card-actions>
+
+        <md-card-title>
+          <md-card-title-text>
+            <span class="md-headline">{{place.name}}</span>
+            <span class="md-subhead">{{place.dateAdded | date:"MM/dd/yyyy"}}</span>
+            <span>{{place._id}}</span>
+            <span>{{place.visited}}</span>
+          </md-card-title-text>
+                      <!-- <md-card-title-media>
+                        <div class="md-media-sm card-media"></div>
+                      </md-card-title-media> -->
+        </md-card-title>
+        <md-card-actions layout="row" layout-align="end center">
+          <!-- <md-button ng-click='getID(place._id)' href='#/submit'>Do This!</md-button> -->
+          <md-button ng-click='getThisPlace(place)' href='#/submit'>Do This!</md-button>
+          <md-button ng-click='expandPanel()'>See More...</md-button>
+        </md-card-actions>
+      </md-card>
+</div>
+
 </div>
