--- a/client/views/partials/header.html
+++ b/client/views/partials/header.html
@@ -4,7 +4,7 @@
     </div>
 </div> -->
 
-<md-toolbar class="md-hue-2">
+<md-toolbar class="md-primary md-hue-2">
 <div layout="column" class="md-toolbar-tools" layout-align="center center">
   <!-- <md-button class="md-icon-button" aria-label="Settings"></md-button> -->
   <h1>Bucket //</h1>
