moved getThisPlace function to factory to use for deleting items

--- a/client/views/templates/ToVisit.html
+++ b/client/views/templates/ToVisit.html
@@ -27,7 +27,7 @@
                 <md-menu-divider></md-menu-divider>
 
                 <md-menu-item>
-                  <md-button ng-click="deletePlace()">
+                  <md-button ng-click="deletePlace(place)">
                     <b>DELETE</b>
                   </md-button>
                 </md-menu-item>
