--- a/client/views/templates/Visited.html
+++ b/client/views/templates/Visited.html
@@ -9,7 +9,7 @@
               </md-button>
               <md-menu-content width="3">
                 <md-menu-item>
-                  <md-button ng-click="editPlace()">
+                  <md-button ng-click="editPlace()" href='#/edit'>
                     <b>EDIT</b>
                   </md-button>
                 </md-menu-item>
