--- a/client/views/templates/ToVisit.html
+++ b/client/views/templates/ToVisit.html
@@ -19,7 +19,7 @@
               </md-button>
               <md-menu-content width="3">
                 <md-menu-item>
-                  <md-button ng-click="editPlace()" href='#/edit'>
+                  <md-button ng-click="getThisPlace(place)" href='#/edit'>
                     <b>EDIT</b>
                   </md-button>
                 </md-menu-item>
