--- a/server/public/views/templates/Submit.html
+++ b/server/public/views/templates/Submit.html
@@ -76,7 +76,7 @@
       <div layout-gt-xs='row'>
         <md-input-container class='md-block' flex-gt-xs>
           <label>Personal Notes</label>
-          <input ng-model='location.userNotes' placeholder ='{{placeObject.place.userNotes}}'>
+          <input ng-model='location.userNotes'>
         </md-input-container>
 
         <md-input-container class='md-block' flex-gt-xs>
@@ -87,7 +87,7 @@
 
       <div layout="row" layout-align="end center">
         <md-button class='md-raised' href='#/tovisit'>Cancel</md-button>
-        <md-button class='md-raised' ng-click ='visitPlace()' href='#/tovisit'>Finish Event!</md-button>
+        <md-button class='md-raised' ng-click ='submitPlace(placeObject, location)' href='#/tovisit'>Finish Event!</md-button>
       </div>
     </form>
   </div>
