--- a/client/views/templates/Submit.html
+++ b/client/views/templates/Submit.html
@@ -81,7 +81,7 @@
 
         <md-input-container class='md-block' flex-gt-xs>
           <label>Date Visited</label>
-          <md-datepicker ng-model='location.dateVisited' placeholder ='{{placeObject.place.dateVisited}}' ></md-datepicker>
+          <md-datepicker ng-model='location.dateVisited' ></md-datepicker>
         </md-input-container>
       </div>
 
